# qvac-ext-lib-llama.cpp

./: CMakeLists.txt  convert_hf_to_gguf.py
.github/workflows/: build.yml
common/: common.h
docs/: fabric-dsl-qwen3-plan.md  fabric-ergonomics-plan.md
examples/: CMakeLists.txt
examples/fabric-cnn/: CMakeLists.txt  main.cpp  train_mnist.py
examples/fabric-external/: CMakeLists.txt  main.cpp  xglm.cpp  xglm.h
examples/fabric-ocr/: CMakeLists.txt  crnn.h  dbnet.h  export_doctr.py  fpn.h  image_utils.h  main.cpp  mobilenetv3.h  postprocess.h  resnet31.h  vgg16_bn.h
examples/fabric-test/: CMakeLists.txt  gen_test_model.py  main.cpp
ggml/: CMakeLists.txt
ggml/src/: gguf.cpp
ggml/src/ggml-cpu/: ops.h
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
scripts/: convert_pytorch_to_gguf.py  fabric_export.py  test_fabric_export.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-registry.cpp  llama-registry.h
src/fabric/: arcee.cpp  arcee.h  command_r.cpp  command_r.h  context.h  exaone.cpp  exaone.h  fabric.h  gemma.cpp  gemma.h  hunyuan_dense.cpp  hunyuan_dense.h  internlm2.cpp  internlm2.h  llama.cpp  llama.h  model.h  modules.h  nemotron.cpp  nemotron.h  nn.h  nn_modules.h  orion.cpp  orion.h  pipeline.h  plamo.cpp  plamo.h  qwen2.cpp  qwen2.h  qwen3.cpp  qwen3.h  refact.cpp  refact.h  runner.h  starcoder2.cpp  starcoder2.h  tensor.cpp  tensor.h  xverse.cpp  xverse.h
src/models/: models.h
tools/mtmd/: clip.cpp
